--- a/YTYCoreFramework/Podfile
+++ b/YTYCoreFramework/Podfile
@@ -5,7 +5,7 @@ platform :ios, '10.0'
 target 'YTYCoreFramework' do
    use_frameworks!
    pod 'AFNetworking'   #, '~> 3.2.1'
-   pod 'SVProgressHUD'
+   pod 'MBProgressHUD'
    pod 'MJRefresh', '~> 3.1.12'
    pod 'YYCache'     ,'1.0.4'           #缓存
    pod 'YYModel'     ,'1.0.4'           #模型处理
